<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/main_back_image"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/cbitss" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/learn_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="30dp"
                android:src="@drawable/process" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/first"
                    android:layout_width="200dp"
                    android:layout_height="250dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/qc" />

                <ImageView
                    android:id="@+id/sec"
                    android:layout_width="200dp"
                    android:layout_height="250dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/wmi" />

                <!--<ImageView-->
                <!--android:id="@+id/third"-->
                <!--android:visibility="gone"-->
                <!--android:layout_width="150dp"-->
                <!--android:layout_height="150dp"-->
                <!--android:layout_margin="10dp"-->
                <!--android:src="@drawable/t3" />-->

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="300dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/enquiry_stages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="30dp"
                    android:paddingStart="30dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="10dp"
                    android:src="@drawable/one" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/main_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="15dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/card_name"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColorHint="@color/hint">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="textCapWords"
                        android:padding="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="25sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/card_course"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColorHint="@color/hint"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/course"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/course"
                        android:inputType="textCapWords"
                        android:padding="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="25sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/card_phone"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColorHint="@color/hint"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:inputType="number"
                        android:maxLength="10"
                        android:padding="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="25sp" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/card_check"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:text="Are you Using Same Number On Whatsapp?"
                        android:textColor="@color/colorPrimary"
                        android:textSize="25sp" />

                    <RadioGroup
                        android:id="@+id/rGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/yes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:text="Yes"
                            android:textColor="@color/colorPrimary"
                            android:textSize="25sp" />

                        <RadioButton
                            android:id="@+id/no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:text="No"
                            android:textColor="@color/colorPrimary"
                            android:textSize="25sp" />

                    </RadioGroup>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/card_whatsapp"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="2dp">

                    <EditText
                        android:id="@+id/prefix_num"
                        android:layout_width="90dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:inputType="phone"
                        android:padding="10dp"
                        android:text="+91"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="25sp" />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/hint">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/whtsapp_number"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/whatsapp_number"
                            android:inputType="phone"
                            android:padding="10dp"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="25sp" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/card_email"
                    android:layout_width="400dp"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textColorHint="@color/hint"
                    android:visibility="gone">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="25sp" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/next"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/main_back_image"
                    android:text="Next"
                    android:textColor="@color/white"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/click"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/main_back_image"
                    android:text="Submit"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>